ADD_LIBRARY             (Decoder MessageDecoder.cxx Udp0x08.cxx Udp0x13.cxx Udp0x1f.cxx Udp0x22.cxx
                                 Udp0x2b.cxx UdpAnalyser.cxx UdpAppartment.cxx UdpCharMove.cxx
                                 UdpChat.cxx UdpDeathRespawn.cxx UdpEntityPositionRequest.cxx
                                 UdpHack.cxx UdpHeldItemAction.cxx UdpItemManualReload.cxx
                                 UdpItemMove.cxx UdpItemUse.cxx UdpKillSelf.cxx UdpMultiPart.cxx
                                 UdpNpcDialog.cxx UdpOOO.cxx UdpOutfitter.cxx UdpPacket0.cxx
                                 UdpPing.cxx UdpPopupResponse.cxx UdpPvpTrade.cxx
                                 UdpQuickAccessBelt.cxx UdpRequestInfo.cxx UdpSubSkill.cxx
                                 UdpSync.cxx UdpTerminal.cxx UdpUseObject.cxx UdpVehicle.cxx
                                 UdpWorldIdInfo.cxx UdpZoning.cxx)
