ADD_LIBRARY             (Definitions ActionMod.cxx Ammo.cxx AppartementPlaces.cxx Appartements.cxx
                                     BluePrintPieces.cxx CharacterActions.cxx CharacterKinds.cxx
                                     Characters.cxx Damage.cxx Definition.cxx Drugs.cxx Factions.cxx
                                     GameDefinitions.cxx Hack.cxx Implants.cxx ItemContainer.cxx
                                     ItemMod.cxx ItemRes.cxx Items.cxx Mission.cxx Npc.cxx
                                     NpcArmor.cxx NpcGroupSpawn.cxx Outposts.cxx Parser.cxx
                                     Recycles.cxx Respawn.cxx Scripts.cxx Shots.cxx Skills.cxx
                                     SubSkills.cxx Trader.cxx VehicleSits.cxx Vehicles.cxx
                                     Weapons.cxx Weather.cxx WorldDatParser.cxx WorldFile.cxx
                                     WorldModels.cxx Worlds.cxx)
