ADD_LIBRARY             (Gamecommands Ban.cxx Brightness.cxx Broadcast.cxx Color.cxx Debug.cxx
                                      Effect.cxx GiveMoney.cxx H.cxx Info.cxx Jail.cxx Kick.cxx
                                      ListBans.cxx Npc.cxx NpcShop.cxx Online.cxx RawF.cxx
                                      Recall.cxx Remove.cxx SetLevel.cxx SetMainSkill.cxx
                                      SetSubSkill.cxx SetTime.cxx Shun.cxx Skin.cxx SpawnActor.cxx
                                      Speed.cxx T.cxx TakeMoney.cxx Teleport.cxx Test.cxx UnBan.cxx
                                      UnJail.cxx UnShun.cxx Uptime.cxx V.cxx Version.cxx Warp.cxx
                                      WarpTo.cxx Weather.cxx)
